# MIMIR

./: .env.example  .gitignore  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  serve.sh
.claude/: launch.json
apps/web/: next.config.mjs  package.json  tailwind.config.ts  tsconfig.json
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/app/about/: page.tsx
apps/web/app/api/candidates/: route.ts
apps/web/app/methodology/: page.tsx
apps/web/app/senate/: page.tsx
apps/web/components/: CandidateCard.tsx  DistrictHeader.tsx  PartyLabel.tsx  SampleDataBanner.tsx  SourceBadge.tsx  UsDistrictMap.tsx
apps/web/lib/: data.ts  party.ts  types.ts
apps/web/lib/providers/: fixtures.ts  prisma.ts
apps/web/public/: us-cd.geojson  us-cd.json
docs/: ARCHITECTURE.md  DATA_MODEL.md  DATA_SOURCES.md  DESIGN_BRIEF.md  NONPARTISAN_POLICY.md  STATE_LOCAL_SOURCES.md
scripts/: README.md
services/ingestion/: README.md  pyproject.toml  run_all.sh
services/ingestion/mimir_ingest/: __init__.py  config.py  db.py  http.py  targets.py
services/ingestion/mimir_ingest/classify/: __init__.py  issues.py
services/ingestion/mimir_ingest/pipelines/: __init__.py  finance.py  run.py
services/ingestion/mimir_ingest/reference/: __init__.py  states.py
services/ingestion/mimir_ingest/sources/: __init__.py  base.py  campaign_sites.py  census_acs.py  congress.py  disclosures.py  fec.py  fec_donors.py  fec_finance.py  fec_senate.py  lobbying.py  tiger.py  twitter_x.py
services/ingestion/tests/: test_classifier_guardrails.py  test_finance.py  test_provenance.py
(+4 files in other folders)
